# World3D

./: .gitattributes  .gitignore  CMakeLists.txt  TODO.txt
app/: CMakeLists.txt  main.cpp
app/src/: main.cpp
app/src/scenes/dune/: dune_demo.cpp
app/src/scenes/fonts/: font_demo.cpp
app/src/scenes/heightmap/: Heightmap.cpp  heightmap_demo.cpp
app/src/scenes/orbit/: orbit_demo.cpp
app/src/scenes/paths/: path_demo.cpp
app/src/scenes/platformer/: platformer_demo.cpp
examples/: CMakeLists.txt
examples/src/: ShaderProgram.cpp  ShaderProgram.hpp  Texture.hpp  dune_demo.cpp  heightmap_demo.cpp  main.cpp  path_demo.cpp
render_engine/: CMakeLists.txt
render_engine/src/: BaseWindow.cpp  BaseWindow.hpp  Camera.cpp  Camera.hpp  Config.hpp  Export.hpp  Image.cpp  Image.hpp  IndexBuffer.hpp  OpenGLDebugger.cpp  OpenGLDebugger.hpp  RenderWindow.cpp  RenderWindow.hpp  Scene.cpp  Scene.hpp  Shader.hpp  ShaderProgram.cpp  Texture2D.hpp  VertexArray.hpp  VertexBuffer.hpp
render_engine/src/camera/orthogonal/: Orthogonal.cpp  Orthogonal.hpp
render_engine/src/camera/perspective/: Perspective.hpp
render_engine/src/gl_resources/: GlResource.cpp  GlResource.hpp  Shader.cpp  Shader.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Texture2D.cpp  Texture2D.hpp  VertexArray.cpp  VertexArray.hpp
render_engine/src/gl_resources/buffers/: GlBuffer.cpp  GlBuffer.hpp  GlBuffer.inl  GlBufferHolder.cpp  GlBufferHolder.hpp  GlBufferHolder.inl  IndexBuffer.cpp  IndexBuffer.hpp  VertexBuffer.cpp  VertexBuffer.hpp
render_engine/src/opengl/: GlResource.cpp  Shader.cpp  Shader.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Texture2D.cpp  Texture2D.hpp  VertexArray.cpp  VertexArray.hpp
render_engine/src/opengl/buffers/: GlBuffer.cpp  GlBufferHolder.cpp  GlBufferHolder.hpp  GlResourceHolder.cpp  GlResourceHolder.hpp  IndexBuffer.cpp  IndexBuffer.hpp  VertexBuffer.cpp  VertexBuffer.hpp
render_engine/src/opengl/context/: GlContext.cpp  GlContext.hpp
render_engine/src/opengl/resources/: GlResource.cpp  GlResource.hpp  GlResourceHolder.cpp  GlResourceHolder.hpp  GlResourceHolder.inl
render_engine/src/utils/: Transform2D.cpp  Transform2D.hpp
render_engine/src/window/: BaseWindow.cpp  BaseWindow.hpp  Event.hpp  Input.hpp  RenderWindow.cpp  RenderWindow.hpp
renderlib/: CMakeLists.txt
renderlib/src/: Camera.cpp  Camera.hpp  Export.hpp  Image.cpp  Image.hpp  IndexBuffer.cpp  IndexBuffer.hpp  OpenGLDebugger.cpp  RenderWindow.cpp  RenderWindow.hpp  Scene.cpp  Scene.hpp  Shader.cpp  Shader.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Texture2D.cpp  Texture2D.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp
scenes/heightmap/: CMakeLists.txt
scenes/heightmap/src/: Heightmap.cpp  Heightmap.hpp  heightmap_demo.cpp
src/app/: Application.cpp  Application.hpp  CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  VulkanApp.cpp  VulkanApp.hpp  main.cpp
src/app/scenes/dune/: DuneDemo.cpp  DuneDemo.hpp
src/app/scenes/fonts/: FontDemo.cpp  FontDemo.hpp
src/app/scenes/heightmap/: HeightmapDemo.cpp  HeightmapDemo.hpp
src/app/scenes/light/: LightDemo.cpp  LightDemo.hpp
src/app/scenes/orbit/: OrbitDemo.cpp  OrbitDemo.hpp
src/app/scenes/paths/: PathDemo.cpp  PathDemo.hpp
src/app/scenes/platformer/: PlatformerDemo.cpp  PlatformerDemo.hpp
src/app/src/: main.cpp
src/app/src/scenes/: DemoScene.cpp  DemoScene.hpp  SceneManager.hpp  SceneManager.inl
src/renderer/: CMakeLists.txt
src/renderer/src/: Export.hpp
src/renderer/src/files/: FileProvider.hpp  Font.hpp  StbImage.hpp
src/renderer/src/graphics/: Color.hpp  Glyph.hpp  Transform2D.cpp  Transform2D.hpp
src/renderer/src/scenes/: DemoScene.hpp  SceneManager.hpp
src/shiny/: CMakeLists.txt  Export.hpp
src/shiny/camera/orbit/: OrbitCamera.cpp  OrbitCamera.hpp
src/shiny/camera/orthogonal/: OrthogonalCamera.cpp  OrthogonalCamera.hpp
src/shiny/camera/perspective/: Camera3D.cpp  Camera3D.hpp  PerspectiveCamera.cpp  PerspectiveCamera.hpp
src/shiny/files/: FileProvider.hpp  Font.cpp  Font.hpp  StbImage.hpp
src/shiny/graphics/: Color.hpp  Glyph.hpp  Transform2D.cpp  Transform2D.hpp
src/shiny/graphics/common/: Color.cpp  Transform2D.cpp  Transform2D.hpp
src/shiny/graphics/meshes/: Mesh.hpp
src/shiny/opengl/holder/: GlResourceHolder.hpp
src/shiny/resources/buffers/: GlBuffer.cpp  GlBuffer.hpp  Texture.cpp  Texture.hpp  VertexArrayObject.cpp  VertexArrayObject.hpp  VertexBufferLayout.cpp  VertexBufferLayout.hpp
src/shiny/resources/holder/: GlResourceHolder.cpp  GlResourceHolder.hpp  GlResourceHolder.inl
src/shiny/resources/shaders/: ShaderProgram.cpp  ShaderProgram.hpp
src/shiny/scenes/: DemoScene.cpp  DemoScene.hpp  SceneManager.cpp  SceneManager.hpp  SceneManager.inl
src/vulkan_api/: CMakeLists.txt
src/vulkan_api/app/: Application.cpp  Application.hpp
src/vulkan_api/buffers/: BufferHolder.cpp  BufferHolder.hpp
src/vulkan_api/command_pool/: CommandBufferPool.hpp
src/vulkan_api/context/: Context.hpp
src/vulkan_api/include/: Export.hpp  VulkanApi.cpp  VulkanApi.hpp
src/vulkan_api/pipeline/: GraphicsPipeline.hpp
src/vulkan_api/pipeline/descriptors/: DescriptorPool.cpp  DescriptorPool.hpp
src/vulkan_api/presentation/: MainView.cpp  MainView.hpp
src/vulkan_api/render/: Renderer.hpp
src/vulkan_api/shaders/: fragment_shader.frag
src/vulkan_api/src/app/: Application.cpp  Application.hpp
src/vulkan_api/src/buffers/: BufferHolder.cpp  BufferHolder.hpp
src/vulkan_api/src/camera/: Camera.cpp  (+1 more)
src/vulkan_api/sync/: SyncManager.hpp
src/vulkan_api/texture/: Texture2D.cpp  Texture2D.hpp
src/vulkan_api/utils/: Tools.cpp  Tools.hpp
utils/: CMakeLists.txt
utils/src/: Config.hpp  Export.hpp  Scene.cpp  Scene.hpp
utils/src/camera/: Camera.cpp  Camera.hpp
utils/src/data/: AppData.hpp
utils/src/files/: FileProvider.cpp  FileProvider.hpp  Font.cpp  Font.hpp  Image.cpp  Image.hpp  StbImage.cpp  StbImage.hpp
utils/src/graphics/: Color.hpp  Glyph.hpp  Text.cpp  Text.hpp  Transform2D.cpp  Transform2D.hpp
utils/src/window/: BaseWindow.cpp  BaseWindow.hpp  RenderWindow.cpp  RenderWindow.hpp
(+227 files in other folders)
